# chairflyer

./: .gitignore  README.md  README.txt  TODO.txt  build.sh  chairflyer.cabal  find-files.sh  handy.el  loop.sh  plot-ac.plt  plot-atmosphere.plt  plot-spring.plt  plots.plt  plots2.plt  plots3.plt  run-all.sh  setup.el  shellbow  wip.scm  wip.sh
handy/: AsTicks.hs  CompassTicks.hs  TachoTicks.hs  altimeter.scm  style.css
lib/: AcState.hs  AcSystem.hs  Atmosphere.hs  Controller.hs  Handy.hs  Happy.hs  Integrators.hs  Jabiru.hs  LiftDrag.hs  NVector.hs  Prop.hs  SimState.hs  SpringSystem.hs  SpringSystem2.hs  Units.hs  Vec.hs
plot/: plot.plt
src/: AcScratch.hs  AcSystem.hs  AcTest.hs  AtmosphereTest.hs  ChairFlyer.hs  Euler.hs  Integrators.hs  Main.hs  Output.hs  RK4.hs  RK4Scratch.hs  SpringScratch.hs  SpringSystem.hs  SpringTest.hs  Vec.hs
test/: LiftDragTest.hs  Main.hs  NVectorTest.hs  VecTest.hs
test/ac/: Main.hs  plot.plt  run.sh
test/atmosphere/: Main.hs  Makefile  plot.plt
test/console/: LineReader.hs  Main.hs  plot.plt
test/handy/: Main.hs  plot.plt
test/ld/: Main.hs
test/pidspring/: Main.hs  plot.plt  run.sh
test/prop/: Main.hs  plot.plt
test/spring/: Main.hs  Makefile  plot.plt  run.sh
web/: index.html  js.js  style.css
webserv/: Main.hs
