name:          chairflyer
version:       0.1.0.0
build-type:    Simple
cabal-version: >=1.10

library
  build-depends:   base
                 , HUnit
  hs-source-dirs: lib
  exposed-modules: Integrators
                 , SpringSystem
                 , AcState
                 , AcSystem
                 , Vec
                 , Atmosphere
                 , Output
                 , Units
                 , Handy
  default-language: Haskell2010

executable test-ac
  hs-source-dirs: test
  main-is: ac/Main.hs
  build-depends: base
               , chairflyer

-- executable webserv
--   hs-source-dirs: webserv
--   main-is: Main.hs
--   build-depends: base
--                , websockets
--                , text
--                , aeson
--                , chairflyer
--                , stm
