name:          chairflyer
version:       0.1.0.0
build-type:    Simple
cabal-version: >=1.10

library
  build-depends: base
               , HUnit
  ghc-options: -Wall
  hs-source-dirs: lib
  exposed-modules: Integrators
                 , SpringSystem
                 , SpringSystem2
                 , AcState
                 , AcSystem
                 , Vec
                 , NVector
                 , Happy
                 , Atmosphere
                 , Output
                 , Units
                 , Handy
                 , LiftDrag
                 , Controller
  default-language: Haskell2010

test-suite chairflyer-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -Wall
  build-depends: base
               , chairflyer
  default-language: Haskell2010
  other-modules: LiftDragTest
               , NVectorTest

executable test-ac
  hs-source-dirs: test
  main-is: ac/Main.hs
  build-depends: base
               , chairflyer

executable pidspring
  hs-source-dirs: test/pidspring
  main-is: Main.hs
  build-depends: base
               , chairflyer

executable webserv
  hs-source-dirs: webserv
  main-is: Main.hs
  build-depends: base
               , websockets
               , text
               , aeson
               , chairflyer
               , stm
