name:          chairflyer
version:       0.2
build-type:    Simple
cabal-version: >=1.10

library
  build-depends: base
               , binary
  ghc-options: -Wall
  hs-source-dirs: lib
  exposed-modules: SimState
                 , Vec
                 , NVector
                 , Happy
                 , Atmosphere
                 , Output
                 , Units
                 , Handy
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -Wall
  build-depends: base
               , chairflyer
  default-language: Haskell2010
  other-modules: NVectorTest
               , VecTest

executable webserv
  hs-source-dirs: webserv
  main-is: Main.hs
  build-depends: base
               , websockets
               , text
               , aeson
               , chairflyer
               , stm
               , binary
               , directory
